# hot-turbo-fullstack

./: .gitignore  README.md  docker-compose.yml  env.example  local-docker-compose.yml  package-lock.json  run-staging.sh  run_local_db.sh  stage-docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/app/: alembic.ini  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 84be2077f7ef_.py  e6776e36ae3e_.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: core.py  security.py  users.py
backend/app/core/: __init__.py  config.py  email_utils.py  security.py
backend/app/crud_utils/: user_crud.py
backend/app/db/: engine.py
backend/app/email_templates/: password_reset.html
backend/app/schemas/: auth.py  db_models.py  messages.py
backend/app/tests/: conftest.py
backend/app/tests/endpoints/: test_core.py
backend/scripts/: tests_local.sh
database/: start-local-db.sh
database/data/: README.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  serviceworker.js
frontend/src/: App.jsx  AppRoutes.jsx  main.jsx
frontend/src/api_client/: api.js
frontend/src/components/: LoginCard.jsx  LoginForm.jsx  MainNavBar.jsx  NavBurgerMenu.jsx  PasswordRecovery.jsx  PrivateRoute.jsx  ProfileForm.jsx  SignupCard.jsx  SignupForm.jsx  ThemeMenu.jsx
frontend/src/contexts/: ThemeContext.jsx  UserContext.jsx
frontend/src/lib/: userDevice.js
frontend/src/pages/: AboutPage.jsx  HomePage.jsx  Login.jsx  NotFoundPage.jsx  PasswordRecoveryPage.jsx  ProfilePage.jsx  ProtectedPage.jsx  SignUp.jsx
