[tool.poetry]
name = "hotturbo-api"
version = "0.1.0"
description = "Backend API for hotturbo template repo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hotturbo_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
